	  only available from https://launchpad.net/~aakef/+archive/ppa )!
	  Thanks to Bernd Schubert for the superb support in fixing the
	  problems encountered.
	* Added two new commands (uck-remaster-mount and uck-remaster-umount)
	  and documentation. These commands are used to do the loopback/
	  unionfs mounts/umounts required by the -m option described above.
	  (#72727)
	* Updated all manual pages to reference the source / bug reporting URLs.

------------
-- 2.2.2 --
------------

* Backend:
	* ISO generation options for 64bit architecture were updated
	
* Package:
	* logo lices was changed to Creative Commons Attribution 3.0 Unported

------------
-- 2.2.1 --
------------

* Backend:
	* Brasero style checksums support was added (#575825)
	* bugs with virtual packages for languages packs were solved
	  (#580578, #525635)
	* workarout for portuguese (pt_PT) language management was implemented
	  (#582200)

------------
-- 2.2.0 --
------------

* Backend:
	* joliet-long option was added to mkisofs
	* uck-remaster-pack-iso support for live-cd description was added
	  and can contain spaces (thanks to Wolf Geldmacher).
	* uck-remaster-pack-iso ISO file argument can now be a path name, too.
	  The ISO is still generated in remaster-new-files but will be moved
	  to the new path (thanks to Wolf Geldmacher).
    * uck-remaster-pack-iso md5sum now throws a fatal error
      (thanks to Wolf Geldmacher).
    * uck-remaster-chroot-rootfs arguments (cmd, remaster-home) have been
      swapped (now it is "remaster-home" "cmd"). This aligns the command with
        (a) almost all of the other uck-remaster commands that take remaster-home 
            as first argument
        (b) aligns the command with the chroot built-in shell command
	    (c) allows to pass additional arguments to the command executed in
	        the chroot environment
	  (thanks to Wolf Geldmacher).
    * uck-remaster reflects swap of $1<>$2 for uck-remaster-chroot-rootfs